memos/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: memos
  namespace: memos-k8s
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`notes.mtaha.dev`)
      priority: 10
      services:
        - kind: Service
          name: memos-main
          namespace: memos-k8s
          passHostHeader: true
          port: 5230
          scheme: http
  tls:
    domains:
      - main: notes.mtaha.dev
    secretName: wildcard-mtaha.dev-tls
